--- a/A15.html
+++ b/A15.html
@@ -1,66 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Company</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Kelompok A15</title>
+  </head>
+  <body>
+    <div class="header" id="header">
+      <div class="container">
+        <div class="header-left">
+          <img src="img\logo-a15-01.png" alt="logo A15" class="logo">
+        </div>
+        <div class="header-list">
+          <ul> 
+            <li><a href="#about-us" class="btn">About Us</a></li>
+            <li><a href="#services" class="btn">Services</a></li>
+            <li><a href="#footer" class="btn">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-    <div class="header">
+    <div class="container" id="about-us">
+      <div class="main">
+        <h1>We bring your vision to life</h1>
+        <p>so you can do the same for others</p>
+      </div>
+      <div class="contents">
+        <div class="who">
+          <h1>Who Are We</h1>
+          <p>
+            A15 Group is an IT consulting and software product
+            development company that designs, develops, and deploys solutions
+            based on AI and Machine Learning. These are accessible through web,
+            mobile, and embedded software products for clients
+          </p>
+        </div>
+        <div class="what">
+          <h1>What We Do</h1>
+          <p>
+            We can provide your business with a full software development
+            solution or simple staff augmentation when you need to scale
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="lesson-wrapper" id="services">
         <div class="container">
-          <div class="header-left">
-            <div class="logo">Company</div>
+          <div class="heading">
+            <h1>Our Services</h1>
           </div>
-          <div class="header-list">
-            <ul>
-                <li class="btn">Home</li>
-                <li class="btn">About Us</li>
-                <li class="btn">Product</li>
-                <li class="btn">Contact Us</li>
-            </ul>
+          <div class="lessons">
+            <div class="lesson">
+              <div class="lesson-icon">
+                <img src="img\CONSULTING-SERVICES.png">
+                <p><b>CONSULTING SERVICES</b></p>
+              </div>
+              <p class="txt-contents">We offer you more than just staff augmentation services. Our software development consulting services will ensure that your solutions perfectly align with your company's goals and solve your most pressing problems.
+              </p>
+            </div>
+            <div class="lesson">
+              <div class="lesson-icon">
+                <img src="img\WEB-DEVELOPMENT.png">
+                <p><b> DEVELOPMENT</b></p>
+              </div>
+              <p class="txt-contents">A15 Group develops responsive web applications
+                that work equally well on mobile phones, tablet computers, desktops, and laptops.</p>
+            </div>
+            <div class="lesson">
+              <div class="lesson-icon">
+                <img src="img\CLOUD-COMPUTING.png">
+                <p><b>CLOUD COMPUTING</b></p>
+              </div>
+              <p class="txt-contents">If you need new infrastructure or a migration
+                to "the cloud", A15 Group
+                has helped many clients reduce
+                overhead and improve reliability.</p>
+            </div>
+            <div class="lesson">
+              <div class="lesson-icon">
+                <img src="img\MOBILE-DEVELOPMENT.png">
+                <p><b>MOBILE DEVELOPMENT</b></p>
+              </div>
+              <p class="txt-contents">A15 Group has helped many clients
+                reduce overhead and improve reliability with Amazon
+                Web Services.
+                </p>
+            </div>
           </div>
         </div>
       </div>
 
-    <div class="container">
-        <div class="main">
-            <h1>We bring your vision to life</h1>
-            <p>so you can do the same for others</p>
+    <div class="product">
+      <h1 class="product-title">Our Clients</h1>
+      <div class="product-item">
+        <img src="img\logo-google.png" alt="logo google" />
+      </div>
+      <div class="product-item">
+        <img src="img\epson.png" alt="logo epson" />
+      </div>
+      <div class="product-item">
+        <img src="img\lenovo.png" alt="logo lenovo" />
+      </div>
+      <div class="product-item">
+        <img src="img\logo-meta.png" alt="logo meta" />
+      </div>
+    </div>
+    
+    <div class="footer" id="footer">
+      <div class="footer-title"><h2>Contact Us</h2></div>
+      <div class="footer-list">
+        <img class="right" src="img\map.png" />
+        <img class="logo-footer" src="img\logo-a15-01.png" />
+      </div>
+      <div class="footer-text">
+        <div class="text-list">
+          <p>Jl. Arnold Mononutu</p>
+          <p>Airmadidi Bawah,</p>
+          <p>Kec. Airmadidi,</p>
+          <p>Kabupaten Minahasa Utara,</p>
+          <p>Sulawesi Utara 95371</p>
         </div>
-        <div class="contents">
-            <div class="who">
-                <h1>Who Are We</h1>
-                <p>PT. Klabat Tekno Perkasa is an IT consulting and software product development company that designs, develops, and deploys solutions based on AI and Machine Learning. These are accessible through web, mobile, and embedded software products for clients</p>
-            </div>
-            <div class="what">
-                <h1>What We Do</h1>
-                <p>We can provide your business with a full software development solution or simple staff augmentation when you need to scale</p>
-            </div>
+        <div class="text-list">
+          <br><p><b>Telephone:</b></p>
+          <p>+62-21-2551-8100</p><br>
+        
+          <p><b>Email:</b></p>
+          <p>admin@a15group.id</p>
         </div>
     </div>
-
-    <div class="product" >
-        <h2 class="product-title">Product</h2>
-        <div class="product-item">
-            <img src="img\logo-google.png" alt="logo google">
-            <p>Google adalah sebuah perusahaan yang dimulai dari mesin pencarian dan kini berkembang dengan lebih dari 50 layanan internet dan produk seperti Gmail sampai software untuk smartphone dan tablet.</p>
-        </div>
-        <div class="product-item">
-            <img src="img\epson.png" alt="logo epson">
-            <p>Epson adalah perusahaan elektronik Jepang yang merupakan salah satu produsen printer komputer dan peralatan informasi dan yang berhubungan gambar terbesar di dunia.</p>
-        </div>
-        <div class="product-item">
-            <img src="img\lenovo.png" alt="logo lenovo">
-            <p>Lenovo adalah salah satu perusahaan teknologi terkemuka di dunia, yang memproduksi PC inovatif dan perangkat untuk internet di seluler.</p>
-        </div>
-        <div class="product-item">
-            <img src="img\logo-meta.png" alt="logo meta">
-            <p>Meta merupakan salah satu perusahaan raksasa dunia bentukan Mark Zuckerberg yang melahirkan banyak inovasi, terutama di bidang media sosial. WhatsApp, Facebook, dan Instagram adalah contoh platform terkenal dibawah naungan Meta.</p>
-        </div>
     </div>
-
-</body>
+  </body>
 </html>
