--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Kelompok A15</title>
   </head>
   <body>
+
     <div class="header" id="header">
       <div class="container">
         <div class="header-left">
           <img src="img\logo-a15-01.png" alt="logo A15" class="logo">
         </div>
+        <span class="fa fa-bars menu-icon"></span>
         <div class="header-list">
           <ul> 
             <li><a href="#about-us" class="btn">About Us</a></li>
